[package]
name = "bubble"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
hex_color = "3.0.0"
lapin = "3.7.1"
lazy_static = "1.5.0"
log = { version = "0.4.28", features = ["max_level_debug", "release_max_level_info"] }
nom = "8.0.0"
quick-xml = { version = "0.38.3", features = ["serialize"] }
regex = "1.12.2"
reqwest = "0.12.24"
serde = "1.0.228"
serde_json = "1.0.145"
serenity = "0.12.4"
simplelog = "0.12.2"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
url = "2.5.7"
