[package]
name = "bubble"
version = "0.1.0"
edition = "2024"

[dependencies]
hex_color = "3.0.0"
itertools = "0.14.0"
log = { version = "0.4.28", features = ["max_level_debug", "release_max_level_info"] }
simplelog = "0.12.2"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
caramel = { path = "./caramel", features = ["webhook", "ns-api", "ns-xml", "log", "akari"] }
lapin = "3.7.2"
serenity = "0.12.4"
bbx = "0.3.1"
urlencoding = "2.1.3"
pest = "2.8.4"
pest_derive = "2.8.4"
html-escape = "0.2.13"
dotenv = "0.15.0"
